--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,25 @@
+body {
+    background-color: rgb(227 245 251)
+}
+h1 {
+    font-family: cursive;
+    color: blue;
+    font-weight: bolder;
+}
+.jumbotron {
+    margin-left: 10px;
+}
 
-/* 
+#foot {
+    /* position: absolute; */
+    overflow: hidden;
+    margin: 0px!important;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
 
-*/
+#app {
+    min-height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
